[+] Add notes edition

--- a/app/src/main/res/layout/activity_simple_note_creation.xml
+++ b/app/src/main/res/layout/activity_simple_note_creation.xml
@@ -25,6 +25,9 @@
             android:layout_height="50dp"
             android:background="@android:color/transparent"
             android:textStyle="bold"
+            android:focusable="true"
+            android:focusedByDefault="false"
+            android:focusableInTouchMode="true"
             tools:ignore="RtlSymmetry" />
 
         <EditText
@@ -32,6 +35,9 @@
             android:paddingTop="8dp"
             android:id="@+id/content_edit_text"
             android:inputType="textCapSentences|textMultiLine"
+            android:focusable="true"
+            android:focusedByDefault="false"
+            android:focusableInTouchMode="true"
             android:hint="@string/note_placeholder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -43,6 +49,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/test"
         android:layout_width="match_parent"
         android:layout_above="@id/note_actions_layout"
         android:layout_height="4dp"
